Fix dark mode colors for taken pieces.

--- a/main.css
+++ b/main.css
@@ -213,6 +213,12 @@ td.light.moved {
     a:visited {
         color: #faf;
     }
+
+    #taken-black,
+    #taken-white {
+        background: darkseagreen;
+        color: black;
+    }
 }
 
 @media print {
